Use ignition-math as package name

--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -1,4 +1,4 @@
-Source: ignmath
+Source: ignition-math
 Standards-Version: 3.9.4
 Maintainer: Jose Luis Rivero <jrivero@osrfoundation.org>
 Section: science
