--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -5,6 +5,7 @@ Section: science
 Priority: extra
 Build-Depends: cmake,
                debhelper (>= 7.0.50~),
+               python,
                ruby-ronn
 Vcs-Browser: https://bitbucket.org/ignitionrobotics/ign_math-release
 Vcs-Hg: https://bitbucket.org/ignitionrobotics/ign_math-release
