--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -11,7 +11,7 @@ Vcs-Browser: https://bitbucket.org/ignitionrobotics/ign_math-release
 Vcs-Hg: https://bitbucket.org/ignitionrobotics/ign_math-release
 Homepage: https://bitbucket.org/ignitionrobotics/ign_math
 
-Package: libignition-math0
+Package: libignition-math2
 Architecture: any
 Section: libs
 Pre-Depends: ${misc:Pre-Depends}
@@ -19,20 +19,20 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
 Multi-Arch: same
 Description: Ignition Robotics Math Library - Shared library
 
-Package: libignition-math-dev
+Package: libignition-math2-dev
 Architecture: any
 Section: libdevel
-Depends: libignition-math0 (= ${binary:Version}),
+Depends: libignition-math2 (= ${binary:Version}),
          ${misc:Depends}
 Multi-Arch: same
 Description: Ignition Robotics Math Library - Development files
  
-Package: libignition-math0-dbg
+Package: libignition-math2-dbg
 Architecture: any
 Section: debug
 Priority: extra
 Depends:
-     libignition-math0 (= ${binary:Version}),
+     libignition-math2 (= ${binary:Version}),
      ${misc:Depends}
 Multi-Arch: same
 Description: Ignition Robotics Math Library - Debugging symbols
