Use Breaks and Replaces for avoid ign-math2 co-installation

--- a/ubuntu/debian/control
+++ b/ubuntu/debian/control
@@ -17,6 +17,8 @@ Section: libs
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Multi-Arch: same
+Replaces: libignition-math2
+Breaks: libignition-math2
 Description: Ignition Robotics Math Library - Shared library
 
 Package: libignition-math3-dev
@@ -25,8 +27,10 @@ Section: libdevel
 Depends: libignition-math3 (= ${binary:Version}),
          ${misc:Depends}
 Multi-Arch: same
+Replaces: libignition-math2-dev
+Breaks: libignition-math2-dev
 Description: Ignition Robotics Math Library - Development files
- 
+
 Package: libignition-math3-dbg
 Architecture: any
 Section: debug
