--- a/ubuntu/debian/rules
+++ b/ubuntu/debian/rules
@@ -5,8 +5,11 @@
 # dh-make output file, you may use that output file without restriction.
 # This special exception was added by Craig Small in version 0.37 of dh-make.
 
+DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH)
+
 .PHONY: override_dh_auto_configure \
-        override_dh_strip 
+        override_dh_strip \
+        override_dh_auto_test
 
 %:
 	dh $@ --parallel
@@ -17,3 +20,10 @@ override_dh_auto_configure:
 
 override_dh_strip:
 	dh_strip -a --dbg-package=libignition-math3-dbg
+
+override_dh_auto_test:
+ifeq ($(DEB_HOST_ARCH),armhf)
+    	true
+else
+	dh_auto_test $@ --no-parallel --buildsystem=cmake
+endif
